<resources>
    <string name="app_name">Github User</string>
    <string name="tab_text_1">Followers</string>
    <string name="tab_text_2">Following</string>
    <string name="myEmail">triswanto.1995@gmail.com</string>
    <string name="myName">Triswanto</string>
    <string name="dicoding_fundamental_android_submission">Dicoding Fundamental Android Submission</string>
    <string name="username">Username</string>
    <string name="name">name</string>
    <string name="company">Company</string>
    <string name="company_text">company</string>
    <string name="location">Location</string>
    <string name="location_text">location</string>
    <string name="repository">Repository</string>
    <string name="repository_text">repository</string>
    <string name="follower">Followers</string>
    <string name="follower_text">followers</string>
    <string name="following">Following</string>
    <string name="following_text">following</string>
    <string name="todo">TODO</string>
    <string name="detail_user_title">Detail User</string>
    <string name="about_title">About</string>
    <string name="about_subtitle">Dicoding Submission</string>
    <string name="main_title">Github User\'s</string>
    <string name="item">Item</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="followers_fragment">Followers Fragment</string>
    <string name="following_fragment">Following Fragment</string>
    <string name="search">Search</string>
    <string name="message_error">Message Error</string>
    <string name="error_title">Error title</string>
    <string name="nameTitle">Name</string>
    <string name="usernameTitle">Username</string>

</resources>