<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:gravity="center"
    android:orientation="horizontal">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/avatar_user_list"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/todo"
            android:scaleType="centerCrop"
            android:src="@drawable/me" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/name_user_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/name"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/card_view_avatar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/company_user_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/company"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/card_view_avatar"
        app:layout_constraintTop_toBottomOf="@id/name_user_list" />


</androidx.constraintlayout.widget.ConstraintLayout>
